crates/shipper-core/src/plan/levels/snapshots/shipper_core__plan__levels__snapshot_tests__snapshot_cycle_fallback.snap
---
source: crates/shipper-core/src/plan/levels/mod.rs
expression: level_summary(&levels)
---
- - 0
  - - a
- - 1
  - - b
- - 2
  - - c
