crates/shipper-core/src/plan/levels/snapshots/shipper_core__plan__levels__snapshot_tests__snapshot_diamond_dependency.snap
---
source: crates/shipper-core/src/plan/levels/mod.rs
expression: level_summary(&levels)
---
- - 0
  - - root
- - 1
  - - left
    - right
- - 2
  - - leaf
