crates/shipper-core/src/plan/levels/snapshots/shipper_core__plan__levels__snapshot_tests__snapshot_disconnected_components.snap
---
source: crates/shipper-core/src/plan/levels/mod.rs
expression: level_summary(&levels)
---
- - 0
  - - alpha
    - gamma
- - 1
  - - beta
    - delta
