crates/shipper-core/src/plan/levels/snapshots/shipper_core__plan__levels__snapshot_tests__snapshot_double_diamond.snap
---
source: crates/shipper-core/src/plan/levels/mod.rs
expression: level_summary(&levels)
---
- - 0
  - - a
- - 1
  - - b
    - c
- - 2
  - - d
- - 3
  - - e
    - f
- - 4
  - - g
