crates/shipper-core/src/plan/levels/snapshots/shipper_core__plan__levels__snapshot_tests__snapshot_linear_chain.snap
---
source: crates/shipper-levels/src/lib.rs
expression: level_summary(&levels)
---
- - 0
  - - pkg-0
- - 1
  - - pkg-1
- - 2
  - - pkg-2
- - 3
  - - pkg-3
- - 4
  - - pkg-4
